--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "css-loader": "^0.28.7",
     "vue-loader": "^13.3.0",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "js-yaml": ">=3.13.1",
+    "mem": ">=4.0.0"
   }
 }
